--- a/templates/Choose-the-angle.html
+++ b/templates/Choose-the-angle.html
@@ -1,122 +1,21 @@
+{% extends 'Base.html' %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html style="font-size: 16px;" lang="ru">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <title>Choose the angle</title>
-    <link rel="stylesheet" href="{% static 'css/stay_sharp/nicepage.css' %}" media="screen">
+{% block title %} Choose the angle< {% endblock %}
+
+{% block static_main %}
     <link rel="stylesheet" href="{% static 'css/stay_sharp/Choose-the-angle.css' %}" media="screen">
-    <script class="u-script" type="text/javascript" src="{% static 'js/stay_sharp/jquery.js' %}" defer></script>
-    <script class="u-script" type="text/javascript" src="{% static 'js/stay_sharp/nicepage.js' %}" defer></script>
-    <meta name="generator" content="Nicepage 4.17.10, nicepage.com">
-    <link id="u-theme-google-font" rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-    <link id="u-page-google-font" rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Lobster:400">
+{% endblock %}
 
+{% block font %}
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Lobster:400">
+{% endblock %}
 
-    <script type="application/ld+json">{
-        "@context": "http://schema.org",
-        "@type": "Organization",
-        "name": "Site1",
-        "logo": "/images/default-logo.png"
-    }</script>
-    <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Choose the angle">
-    <meta property="og:description" content="">
-    <meta property="og:type" content="website">
-</head>
-<body class="u-body u-overlap u-overlap-contrast u-overlap-transparent u-xxl-mode" data-lang="ru">
-<header class="u-clearfix u-header u-sticky u-sticky-0046 u-header" id="section1-1">
-    <div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1">
-            <img src="{% static 'images/stay_sharp/default-logo.png' %}" class="u-logo-image u-logo-image-1">
-        </a>
-        <nav class="u-align-right-lg u-align-right-md u-align-right-sm u-align-right-xl u-align-right-xs u-menu u-menu-one-level u-offcanvas u-menu-1"
-             data-responsive-from="LG">
-            <div class="menu-collapse"
-                 style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
-                <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-color u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-text-palette-3-light-1"
-                   href="#section1"
-                   data-lang-en="{&quot;content&quot;:&quot;<svg class=\&quot;u-svg-link\&quot; viewBox=\&quot;0 0 24 24\&quot;><use xmlns:xlink=\&quot;http://www.w3.org/1999/xlink\&quot; xlink:href=\&quot;#menu-hamburger\&quot;></use></svg><svg class=\&quot;u-svg-content\&quot; version=\&quot;1.1\&quot; id=\&quot;menu-hamburger\&quot; viewBox=\&quot;0 0 16 16\&quot; x=\&quot;0px\&quot; y=\&quot;0px\&quot; xmlns:xlink=\&quot;http://www.w3.org/1999/xlink\&quot; xmlns=\&quot;http://www.w3.org/2000/svg\&quot;>    <g>        <rect y=\&quot;1\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;7\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;13\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>    </g></svg>&quot;,&quot;href&quot;:&quot;#section1&quot;}">
-                    <svg class="u-svg-link" viewBox="0 0 24 24">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use>
-                    </svg>
-                    <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px"
-                         xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
-                        <g>
-                            <rect y="1" width="16" height="2"></rect>
-                            <rect y="7" width="16" height="2"></rect>
-                            <rect y="13" width="16" height="2"></rect>
-                        </g>
-                    </svg>
-                </a>
-            </div>
-            <div class="u-custom-menu u-nav-container">
-                <ul class="u-nav u-spacing-30 u-unstyled u-nav-1">
-                    <li class="u-nav-item"><a
-                            class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
-                            href="{% url 'main' %}"
-                            data-lang-en="{&quot;content&quot;:&quot;Main&quot;,&quot;href&quot;:&quot;Main.html&quot;}"
-                            style="padding: 10px 0px;">Main</a>
-                    </li>
-                    <li class="u-nav-item"><a
-                            class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
-                            href="{% url 'choose_the_angle' %}" style="padding: 10px 0px;">Choose the angle</a>
-                    </li>
-                    <li class="u-nav-item"><a
-                            class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
-                            href="{% url 'calculation' %}"
-                            data-lang-en="{&quot;content&quot;:&quot;Calculation&quot;,&quot;href&quot;:&quot;#&quot;}"
-                            style="padding: 10px 0px;">Calculation</a>
-                    </li>
-                    <li class="u-nav-item"><a
-                            class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
-                            href="{% url 'calculation' %}#feedback" data-page-id="317024594"
-                            data-lang-en="{&quot;content&quot;:&quot;FeedBack&quot;,&quot;href&quot;:&quot;#&quot;}"
-                            style="padding: 10px 0px;">FeedBack</a>
-                    </li>
-                    <li class="u-nav-item"><a
-                            class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
-                            href="{% url 'login' %}"
-                            data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}"
-                            style="padding: 10px 0px;">Login</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="u-custom-menu u-nav-container-collapse">
-                <div class="u-container-style u-hover-feature u-inner-container-layout u-opacity u-opacity-90 u-palette-3-light-2 u-shape-round u-sidenav u-sidenav-1">
-                    <div class="u-inner-container-layout u-sidenav-overflow">
-                        <ul class="u-align-center-xxl u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-align-left-xs u-menu-dropdown u-nav u-popupmenu-items u-spacing-0 u-text-active-palette-1-base u-unstyled u-nav-2">
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'main' %}"
-                                                      data-lang-en="{&quot;content&quot;:&quot;Main&quot;,&quot;href&quot;:&quot;Main.html&quot;}">Main</a>
-                            </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'choose_the_angle' %}">Choose
-                                the angle</a>
-                            </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'calculation' %}"
-                                                      data-lang-en="{&quot;content&quot;:&quot;Calculation&quot;,&quot;href&quot;:&quot;#&quot;}">Calculation</a>
-                            </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link"
-                                                      href="{% url 'calculation' %}#feedback" data-page-id="317024594"
-                                                      data-lang-en="{&quot;content&quot;:&quot;FeedBack&quot;,&quot;href&quot;:&quot;#&quot;}">FeedBack</a>
-                            </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'login' %}"
-                                                      data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}">Login</a>
-                            </li>
-                        </ul>
-                        <div class="u-menu-close u-menu-close-1"></div>
-                    </div>
-                </div>
-                <div class="u-menu-overlay u-opacity u-opacity-45 u-palette-1-base"></div>
-            </div>
-        </nav>
-    </div>
-</header>
+{% block content %}"Choose the angle"{% endblock %}
+
+{% block section1 %}
 <section
         class="skrollable u-border-2 u-border-palette-3-base u-clearfix u-image u-lightbox u-parallax u-shading u-section-1"
         id="choose-the-angle" data-image-width="1553" data-image-height="1000">
@@ -333,7 +232,4 @@
         </div>
     </div>
 </section>
-
-
-</body>
-</html>
+{% endblock %}
