--- a/templates/Base.html
+++ b/templates/Base.html
@@ -73,18 +73,35 @@
                             data-lang-en="{&quot;content&quot;:&quot;Calculation&quot;,&quot;href&quot;:&quot;#&quot;}"
                             style="padding: 10px 0px;">Calculation</a>
                     </li>
+                    {% if user.is_authenticated %}
+                    <li class="u-nav-item"><a
+                            class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
+                            href="{% url 'account_table' %}"
+                            data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}"
+                            style="padding: 10px 0px;">{{ user.get_username }} - Table</a>
+                    </li>
+                    {% endif %}
                     <li class="u-nav-item"><a
                             class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
                             href="{% url 'calculation' %}#feedback" data-page-id="317024594"
                             data-lang-en="{&quot;content&quot;:&quot;FeedBack&quot;,&quot;href&quot;:&quot;#&quot;}"
                             style="padding: 10px 0px;">FeedBack</a>
                     </li>
+                    {% if user.is_authenticated %}
+                    <li class="u-nav-item"><a
+                            class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
+                            href="{% url 'logout' %}"
+                            data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}"
+                            style="padding: 10px 0px;">{{ user.get_username }} Logout</a>
+                    </li>
+                    {% else %}
                     <li class="u-nav-item"><a
                             class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
                             href="{% url 'login' %}"
                             data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}"
                             style="padding: 10px 0px;">Login</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
             <div class="u-custom-menu u-nav-container-collapse">
@@ -101,13 +118,24 @@
                             <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'calculation' %}"
                                                       data-lang-en="{&quot;content&quot;:&quot;Calculation&quot;,&quot;href&quot;:&quot;#&quot;}">Calculation</a>
                             </li>
+                            {% if user.is_authenticated %}
+                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'account_table' %}"
+                                                      data-lang-en="{&quot;content&quot;:&quot;Calculation&quot;,&quot;href&quot;:&quot;#&quot;}">{{ user.get_username }} - Table</a>
+                            </li>
+                            {% endif %}
                             <li class="u-nav-item"><a class="u-button-style u-nav-link"
                                                       href="{% url 'calculation' %}#feedback" data-page-id="317024594"
                                                       data-lang-en="{&quot;content&quot;:&quot;FeedBack&quot;,&quot;href&quot;:&quot;#&quot;}">FeedBack</a>
                             </li>
+                            {% if user.is_authenticated %}
+                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'logout' %}"
+                                                      data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}">{{ user.get_username }} Logout</a>
+                            </li>
+                            {% else %}
                             <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'login' %}"
                                                       data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}">Login</a>
                             </li>
+                            {% endif %}
                         </ul>
                         <div class="u-menu-close u-menu-close-1"></div>
                     </div>
