--- a/templates/Base.html
+++ b/templates/Base.html
@@ -92,7 +92,7 @@
                             class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
                             href="{% url 'logout' %}"
                             data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}"
-                            style="padding: 10px 0px;">{{ user.get_username }} Logout</a>
+                            style="padding: 10px 0px;">{{ user.get_username }} - Logout</a>
                     </li>
                     {% else %}
                     <li class="u-nav-item"><a
@@ -100,6 +100,12 @@
                             href="{% url 'login' %}"
                             data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}"
                             style="padding: 10px 0px;">Login</a>
+                    </li>
+                    <li class="u-nav-item"><a
+                            class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
+                            href="{% url 'sighup' %}"
+                            data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}"
+                            style="padding: 10px 0px;">Sighup</a>
                     </li>
                     {% endif %}
                 </ul>
