--- a/static/css/stay_sharp/Calculation.css
+++ b/static/css/stay_sharp/Calculation.css
@@ -1,7 +1,7 @@
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-02.jpeg");
-  background-position: 50% 50%;
   min-height: 794px;
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-layout-wrap-1 {
@@ -19,16 +19,16 @@
 }
 
 .u-section-1 .u-text-1 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
+  font-weight: 700;
   width: 251px;
-  font-weight: 600;
-  margin: 0 auto;
+  margin: -2px auto 0;
 }
 
 .u-section-1 .u-form-1 {
   height: 262px;
   width: 280px;
-  margin: 10px auto 0;
+  margin: 12px auto 0;
 }
 
 .u-section-1 .u-form-group-1 {
@@ -128,7 +128,7 @@
   width: 100px;
   height: auto;
   min-height: 47px;
-  margin: 13px 170px 0 auto;
+  margin: 12px 170px 0 auto;
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -137,13 +137,13 @@
 
 .u-section-1 .u-text-3 {
   font-size: 1.5rem;
-  margin: 10px 0 0;
+  margin: 0;
 }
 
 .u-section-1 .u-text-4 {
   font-size: 1.5rem;
   font-weight: 600;
-  margin: -37px 270px 0 167px;
+  margin: -36px 270px 0 167px;
 }
 
 .u-section-1 .u-layout-cell-2 {
@@ -155,9 +155,8 @@
 }
 
 .u-section-1 .u-text-5 {
-  font-size: 1.5rem;
   width: 250px;
-  font-weight: 600;
+  background-image: none;
   margin: 0 auto;
 }
 
@@ -285,7 +284,7 @@
 .u-section-1 .u-text-6 {
   font-size: 1.5rem;
   width: 299px;
-  margin: 22px auto 0;
+  margin: 23px auto 0;
 }
 
 .u-section-1 .u-group-2 {
@@ -293,7 +292,7 @@
   width: 100px;
   height: auto;
   min-height: 47px;
-  margin: 13px 185px 0 auto;
+  margin: 12px 185px 0 auto;
 }
 
 .u-section-1 .u-container-layout-4 {
@@ -318,11 +317,11 @@
 
   .u-section-1 .u-layout-wrap-1 {
     width: 1140px;
-    margin-top: 97px;
+    margin-top: 80px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 671px;
+    min-height: 688px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -388,7 +387,7 @@
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 671px;
+    min-height: 688px;
   }
 
   .u-section-1 .u-container-layout-3 {
@@ -431,6 +430,7 @@
 
 @media (max-width: 1199px) {
    .u-section-1 {
+    background-position: 50% 50%;
     min-height: 550px;
   }
 
@@ -533,7 +533,6 @@
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 0;
     margin-left: 0;
     margin-right: 0;
   }
@@ -680,7 +679,7 @@
 
   .u-section-1 .u-form-1 {
     width: 280px;
-    margin-top: 10px;
+    margin-top: 12px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -746,7 +745,7 @@
     margin-left: 86px;
   }
 } .u-section-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/static/images/stay_sharp/317024594-02.jpeg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/images/317024594-02.jpeg");
   background-position: 50% 50%;
 }
 
@@ -818,6 +817,10 @@
 }
 
 @media (max-width: 1199px) {
+   .u-section-2 {
+    background-position: 50% 50%;
+  }
+
   .u-section-2 .u-sheet-1 {
     min-height: 796px;
   }
