--- a/templates/Calculation.html
+++ b/templates/Calculation.html
@@ -8,8 +8,10 @@
 {% endblock %}
 
 {% block font %}
+    <link id="u-theme-google-font" rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i|Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+          href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Merriweather:300,300i,400,400i,700,700i,900,900i">
 {% endblock %}
 
 {% block content %}"Calculation"{% endblock %}
@@ -22,13 +24,13 @@
             <div class="u-layout-row">
                 <div class="u-container-style u-layout-cell u-size-30-lg u-size-30-md u-size-30-sm u-size-30-xl u-size-30-xs u-layout-cell-1">
                     <div class="u-border-2 u-border-palette-3-light-1 u-container-layout u-container-layout-1">
-                        <h3 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-default-xs u-text-palette-3-light-1 u-text-1">
+                        <h3 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-default-xs u-text-palette-3-light-1 u-text-1">
                             Enter data&nbsp;<br>for griding (mm)
                         </h3>
                         <div class="u-form u-form-1">
                             <form action="" method="POST"
-                                  class="u-clearfix u-form-custom-backend u-form-spacing-5 u-form-vertical u-inner-form"
-                                  source="customphp" name="grinding_data" style="padding: 19px;">
+                                  class="u-clearfix u-form-custom-backend u-form-spacing-10 u-form-vertical u-inner-form"
+                                  source="customphp" name="grinding_data" style="padding: 10px;">
                                 {% csrf_token %}
                                 <div class="u-form-group u-label-left u-form-group-1">
                                     <label for="text-114c"
@@ -96,10 +98,10 @@
                         </h3>
 
                         <div class="u-align-center u-container-style u-group u-palette-3-light-3 u-radius-10 u-shape-round u-group-1">
-                            <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
-                                <h3 class="u-text u-text-black u-text-3" data-animation-name="counter"
-
-                                    data-animation-event="scroll" data-animation-duration="3000">{{ USH|floatformat:1 }}<br>
+                            <div class="u-container-layout u-valign-middle u-container-layout-2">
+                                <h3 class="u-custom-font u-font-roboto u-text u-text-black u-text-3"
+                                    data-animation-name="counter" data-animation-event="scroll"
+                                    data-animation-duration="3000">{{ USH|floatformat:1 }}<br>
                                 </h3>
                             </div>
                         </div>
@@ -109,14 +111,14 @@
                 </div>
                 <div class="u-container-style u-layout-cell u-size-30-lg u-size-30-md u-size-30-sm u-size-30-xl u-size-30-xs u-layout-cell-2">
                     <div class="u-border-2 u-border-palette-3-light-1 u-container-layout u-container-layout-3">
-                        <h3 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-default-xs u-text-palette-3-light-1 u-text-5">
+                        <h3 class="u-align-center u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-default-xs u-text-palette-3-light-1 u-text-5">
                             Enter data&nbsp;<br>for honing&nbsp;(mm)
                         </h3>
                         <div class="u-form u-form-2">
                             <form action="" method="POST"
-                                  class="u-clearfix u-form-custom-backend u-form-spacing-5 u-form-vertical u-inner-form"
+                                  class="u-clearfix u-form-custom-backend u-form-spacing-12 u-form-vertical u-inner-form"
                                   source="custom"
-                                  name="grinding_data" style="padding: 19px;">
+                                  name="grinding_data" style="padding: 10px;">
                                 {% csrf_token %}
                                 <div class="u-form-group u-label-left u-form-group-7">
                                     <label for="text-114c"
@@ -200,9 +202,8 @@
                         </h3>
                         <div class="u-align-center u-container-style u-group u-palette-3-light-3 u-radius-10 u-shape-round u-group-2">
                             <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-4">
-                                <h3 class="u-text u-text-black u-text-7" data-animation-name="counter"
-
-                                    data-animation-event="scroll"
+                                <h3 class="u-custom-font u-font-roboto u-text u-text-black u-text-7"
+                                    data-animation-name="counter" data-animation-event="scroll"
                                     data-animation-duration="3000">{{ FVB_H|floatformat:1 }}<br>
                                 </h3>
                             </div>
