--- a/templates/Choose-the-angle.html
+++ b/templates/Choose-the-angle.html
@@ -9,8 +9,10 @@
 {% endblock %}
 
 {% block font %}
-    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Lobster:400">
+    <link id="u-theme-google-font" rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    <link id="u-page-google-font" rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Lobster:400|Merriweather:300,300i,400,400i,700,700i,900,900i">
 {% endblock %}
 
 {% block content %}"Choose the angle"{% endblock %}
@@ -20,7 +22,7 @@
         class="skrollable u-border-2 u-border-palette-3-base u-clearfix u-image u-lightbox u-parallax u-shading u-section-1"
         id="choose-the-angle" data-image-width="1553" data-image-height="1000">
     <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-clearfix u-expanded-width-xs u-expanded-width-xxl u-gutter-14 u-layout-wrap u-layout-wrap-1">
+        <div class="u-clearfix u-expanded-width u-gutter-14 u-layout-wrap u-layout-wrap-1">
             <div class="u-layout">
                 <div class="u-layout-row">
                     <div class="u-size-30">
@@ -109,7 +111,7 @@
                                             <input type="hidden" value="" name="recaptchaResponse">
                                         </form>
                                     </div>
-                                    <h4 class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-align-center-xs u-custom-font u-font-lobster u-text u-text-palette-4-light-1 u-text-3"
+                                    <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-1 u-text-3"
                                         data-animation-name="" data-animation-duration="0" data-animation-delay="0"
                                         data-animation-direction="">{{ message_step1 }}</h4>
                                     <div class="u-form u-form-2">
@@ -150,7 +152,7 @@
                                     <h5 class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-align-center-xs u-text u-text-palette-4-light-1 u-text-4">
                                         Step 2<br>
                                     </h5>
-                                    <h4 class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-align-center-xs u-custom-font u-font-lobster u-text u-text-palette-4-light-1 u-text-5"
+                                    <h4 class="u-align-center u-custom-font u-font-lobster u-text u-text-palette-4-light-1 u-text-5"
                                         data-animation-name="" data-animation-duration="0" data-animation-delay="0"
                                         data-animation-direction="">{{ message_step2 }}</h4>
                                 </div>
@@ -206,19 +208,17 @@
                                     <h3 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-palette-3-light-1 u-text-8">
                                         <span style="font-size: 1.875rem;">Suggestion</span>
                                     </h3>
-                                    <h3 class="u-align-center u-text u-text-palette-3-light-1 u-text-9"
+                                    <h4 class="u-custom-font u-font-playfair-display u-text u-text-palette-4-light-1 u-text-9">
+                                        An<span style="font-weight: 700;"></span>gle&nbsp; (double)
+                                    </h4>
+                                    <h3 class="u-align-center-xxl u-custom-font u-heading-font u-text u-text-palette-3-light-1 u-text-10"
                                         data-animation-name="counter" data-animation-event="scroll"
-                                        data-animation-duration="3000">
-                                        {{ knife.angle|default:angle|floatformat:1}}
+                                        data-animation-duration="3000">{{ knife.angle|default:angle|floatformat:1}}
                                     </h3>
-                                    <h4 class="u-custom-font u-font-playfair-display u-text u-text-palette-4-light-1 u-text-10">
-                                        An<span style="font-weight: 700;"></span>gle (double)
+                                    <h4 class="u-text u-text-palette-4-light-1 u-text-11"> Honing additional&nbsp;<br>for
+                                        debarring&nbsp;
                                     </h4>
-
-                                    <h4 class="u-text u-text-palette-4-light-1 u-text-11">
-                                        Honing additional<br>for debarring
-                                    </h4>
-                                    <h3 class="u-align-center u-text u-text-palette-3-light-1 u-text-12"
+                                    <h3 class="u-align-center-xxl u-custom-font u-heading-font u-text u-text-palette-3-light-1 u-text-12"
                                         data-animation-name="counter" data-animation-event="scroll"
                                         data-animation-duration="3000">
                                         {{ knife.honing_add|default:honing_add|floatformat:1}}
